--- a/index.html
+++ b/index.html
@@ -19,65 +19,136 @@
     <button class="g button"></button>
     <button class="h button"></button>
     <button class="i button"></button>
-    <button class="j button"></button>
-    <button class="k button"></button>
-    <button class="l button"></button>
-    <button class="m button"></button>
-    <button class="n button"></button>
-    <button class="o button"></button>
-    <button class="p button"></button>
-    <button class="q button"></button>
-    <button class="r button"></button>
-    <button class="s button"></button>
-    <button class="t button"></button>
-    <button class="u button"></button>
-    <button class="v button"></button>
-    <button class="w button"></button>
-    <button class="x button"></button>
-    <button class="y button"></button>
-    <button class="z button"></button>
-    <button class="a button" ></button>
-    <button class="b button"></button>
-    <button class="c button"></button>
-    <button class="d button"></button>
-    <button class="e button"></button>
-    <button class="f button"></button>
-    <button class="g button"></button>
-    <button class="h button"></button>
-    <button class="i button"></button>
-    <button class="j button"></button>
-    <button class="k button"></button>
-    <button class="l button"></button>
-    <button class="m button"></button>
-    <button class="n button"></button>
-    <button class="o button"></button>
-    <button class="p button"></button>
-    <button class="q button"></button>
-    <button class="r button"></button>
-    <button class="s button"></button>
-    <button class="t button"></button>
-    <button class="u button"></button>
-    <button class="v button"></button>
-    <button class="w button"></button>
-    <button class="x button"></button>
-    <button class="y button"></button>
-    <button class="z button"></button>
-    <button class="a button" ></button>
-    <button class="b button"></button>
-    <button class="c button"></button>
-    <button class="d button"></button>
-    <button class="e button"></button>
-    <button class="f button"></button>
-    <button class="g button"></button>
-    <button class="h button"></button>
-    <button class="i button"></button>
-    <button class="j button"></button>
-    <button class="k button"></button>
-    <button class="l button"></button>
-    <button class="m button"></button>
-    <button class="n button"></button>
-  
 
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+  
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+ 
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+  
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button" ></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
   </div>
   <style>
     body {
@@ -92,18 +163,18 @@
     .button {
     border: none;
     color: white;
-    padding: 60px 60px;
+    padding: 40px 40px;
     margin: 2px 1px;
     transition-duration: 0.1s;
   
     color: black; 
 
-    background: rgba( 255, 255, 255, 0.10 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    background: rgba(255, 255, 255, 0);
+    box-shadow: 0 8px 32px 0 rgba(3, 4, 14, 0.37);
     backdrop-filter: blur( 4.5px );
     -webkit-backdrop-filter: blur( 4.5px );
-    border-radius: 3px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border-radius: 50%;
+    
     }
     .buttons{
     display:inline-block;
@@ -113,109 +184,51 @@
 
 
 .a:hover {
-background:  rgba(227, 231, 8, 0.849);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #111; 
+        background: #39ff14; 
+        box-shadow: 0 0 50px #39ff14;
 }
 .b:hover {
-background: rgba(10, 233, 29, 0.788);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #111; 
+        background: #39ff14; 
+        box-shadow: 0 0 50px #39ff14;
 }
 .c:hover {
-background: rgba(231, 15, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #111; 
+        background: #39ff14; 
+        box-shadow: 0 0 50px #39ff14;
 }
 .d:hover {
-background: rgba(80, 15, 231, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #111; 
+        background: #39ff14; 
+        box-shadow: 0 0 50px #39ff14;
 }
 .e:hover {
-background: rgba(15, 206, 231, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #111; 
+        background: #39ff14; 
+        box-shadow: 0 0 50px #39ff14;
 }
 .f:hover {
-background: rgba(189, 7, 206, 0.87);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #111; 
+        background: #39ff14; 
+        box-shadow: 0 0 50px #39ff14;
 }
 .g:hover {
-background: rgba(231, 101, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #111; 
+        background: #39ff14; 
+        box-shadow: 0 0 50px #39ff14;
 }
 .h:hover {
-background: rgba(15, 231, 141, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #111; 
+        background: #39ff14; 
+        box-shadow: 0 0 50px #39ff14;
 }
 .i:hover {
-background: rgba(82, 7, 223, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  color: #111; 
+        background: #39ff14; 
+        box-shadow: 0 0 50px #39ff14;
 }
-.j:hover {
-background: rgba(231, 15, 148, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.k:hover {
-background: rgba(209, 231, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.l:hover {
-background: rgba(231, 15, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.m:hover {
-background: rgba(152, 15, 231, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.n:hover {
-background: rgba(15, 231, 51, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.o:hover {
-background: rgba(231, 15, 134, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.p:hover {
-background: rgba(55, 15, 231, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.q:hover {
-background: rgba(231, 173, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.r:hover {
-background: rgba(33, 231, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.s:hover {
-background: rgba(15, 224, 231, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.t:hover {
-background: rgba(231, 47, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.u:hover {
-background: rgba(15, 101, 231, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.v:hover {
-background: rgba(58, 231, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.w:hover {
-background: rgba(94, 231, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.x:hover {
-background: rgba(73, 15, 231, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.y:hover {
-background: rgba(231, 15, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.z:hover {
-background: rgba(217, 231, 15, 0.842);
-box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
+
 
 </style>
 </body>
