--- a/index.html
+++ b/index.html
@@ -183,50 +183,51 @@
     }
 
 
-.a:hover {
-  color: #111; 
-        background: #39ff14; 
-        box-shadow: 0 0 50px #39ff14;
-}
+
 .b:hover {
   color: #111; 
-        background: #39ff14; 
-        box-shadow: 0 0 50px #39ff14;
+        background: #efff14; 
+        box-shadow: 0 0 50px #efff14;
 }
 .c:hover {
   color: #111; 
-        background: #39ff14; 
-        box-shadow: 0 0 50px #39ff14;
+        background: #ff1414; 
+        box-shadow: 0 0 50px #ff1414;
 }
 .d:hover {
   color: #111; 
-        background: #39ff14; 
-        box-shadow: 0 0 50px #39ff14;
+        background: #4714ff; 
+        box-shadow: 0 0 50px #4714ff;
 }
 .e:hover {
+  color: #111; 
+        background: #f714ff; 
+        box-shadow: 0 0 50px #f714ff;
+}
+.a:hover {
   color: #111; 
         background: #39ff14; 
         box-shadow: 0 0 50px #39ff14;
 }
 .f:hover {
   color: #111; 
-        background: #39ff14; 
-        box-shadow: 0 0 50px #39ff14;
+        background: #ffb514; 
+        box-shadow: 0 0 50px #ffb514;
 }
 .g:hover {
   color: #111; 
-        background: #39ff14; 
-        box-shadow: 0 0 50px #39ff14;
+        background: #14dcff; 
+        box-shadow: 0 0 50px #14dcff;
 }
 .h:hover {
   color: #111; 
-        background: #39ff14; 
-        box-shadow: 0 0 50px #39ff14;
+        background: #8d14ff; 
+        box-shadow: 0 0 50px #8d14ff;
 }
 .i:hover {
   color: #111; 
-        background: #39ff14; 
-        box-shadow: 0 0 50px #39ff14;
+        background: #8b4504; 
+        box-shadow: 0 0 50px #8b4504;
 }
 
 
