--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
   <div class="buttons">
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -20,7 +20,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -30,7 +30,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -40,7 +40,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -50,7 +50,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -60,7 +60,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -70,7 +70,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -80,7 +80,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -90,7 +90,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
   
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -100,7 +100,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
  
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -110,7 +110,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -120,7 +120,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -130,7 +130,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
   
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -140,7 +140,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" ></button>
+    <button class="a button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -177,7 +177,7 @@
     
     }
     .buttons{
-    display:flex;
+    display:block;
     margin-left: 40px;
     margin-top:40px;
     }
@@ -232,5 +232,15 @@
 
 
 </style>
+<script>
+function myFunction() {
+  alert("CONGRATULATIONS!YOU DID IT!");
+}
+
+
+
+
+
+</script>
 </body>
 </html>
