--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
   
   <div class="buttons">
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="a button"></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="f button"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="SECRET button" onclick="myFunction()"></button>
+
+    <button class="a button"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -20,7 +30,17 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="a button"></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="SECRET button" onclick="myFunction()"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -30,7 +50,17 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="a button"></button>
+    <button class="b button"></button>
+    <button class="c button"></button>
+    <button class="d button"></button>
+    <button class="e button"></button>
+    <button class="SECRET button" onclick="myFunction()"></button>
+    <button class="g button"></button>
+    <button class="h button"></button>
+    <button class="i button"></button>
+
+    <button class="a button"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -40,7 +70,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="SECRET button" onclick="myFunction()"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -50,37 +80,7 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" onclick="myFunction()"></button>
-    <button class="b button"></button>
-    <button class="c button"></button>
-    <button class="d button"></button>
-    <button class="e button"></button>
-    <button class="f button"></button>
-    <button class="g button"></button>
-    <button class="h button"></button>
-    <button class="i button"></button>
-
-    <button class="a button" onclick="myFunction()"></button>
-    <button class="b button"></button>
-    <button class="c button"></button>
-    <button class="d button"></button>
-    <button class="e button"></button>
-    <button class="f button"></button>
-    <button class="g button"></button>
-    <button class="h button"></button>
-    <button class="i button"></button>
-
-    <button class="a button" onclick="myFunction()"></button>
-    <button class="b button"></button>
-    <button class="c button"></button>
-    <button class="d button"></button>
-    <button class="e button"></button>
-    <button class="f button"></button>
-    <button class="g button"></button>
-    <button class="h button"></button>
-    <button class="i button"></button>
-
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="a button"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -90,17 +90,17 @@
     <button class="h button"></button>
     <button class="i button"></button>
   
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="a button"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
-    <button class="e button"></button>
+    <button class="SECRET button" onclick="myFunction()"></button>
     <button class="f button"></button>
     <button class="g button"></button>
     <button class="h button"></button>
     <button class="i button"></button>
  
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="a button"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -110,17 +110,17 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="a button"></button>
     <button class="b button"></button>
     <button class="c button"></button>
-    <button class="d button"></button>
+    <button class="SECRET button" onclick="myFunction()"></button>
     <button class="e button"></button>
     <button class="f button"></button>
     <button class="g button"></button>
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="a button"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -128,9 +128,9 @@
     <button class="f button"></button>
     <button class="g button"></button>
     <button class="h button"></button>
-    <button class="i button"></button>
+    <button class="SECRET button" onclick="myFunction()"></button>
   
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="a button"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
@@ -140,11 +140,11 @@
     <button class="h button"></button>
     <button class="i button"></button>
 
-    <button class="a button" onclick="myFunction()"></button>
+    <button class="a button"></button>
     <button class="b button"></button>
     <button class="c button"></button>
     <button class="d button"></button>
-    <button class="e button"></button>
+    <button class="SECRET button" onclick="myFunction()"></button>
     <button class="f button"></button>
     <button class="g button"></button>
     <button class="h button"></button>
@@ -183,11 +183,15 @@
     }
 
 
-
-.b:hover {
+    .SECRET:hover {
   color: #111; 
         background: #efff14; 
-        box-shadow: 0 0 50px #efff14;
+        box-shadow: 0 0 90px #efff14;
+}
+.b:hover {
+  color: #111; 
+        background: #1466ff; 
+        box-shadow: 0 0 50px #1466ff;
 }
 .c:hover {
   color: #111; 
@@ -234,7 +238,7 @@
 </style>
 <script>
 function myFunction() {
-  alert("CONGRATULATIONS!YOU DID IT!");
+  alert("CONGRATULATIONS!     YOU DID IT!");
 }
 
 
